--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Mr.Phương Home Page
+    <title>Ms.Cẩm Dai Ichi Life
     </title>
     <!-- META TAGS -->
     <meta charset="utf-8">
@@ -80,7 +80,7 @@
         <div>
           <img src="images/photos/img.jpg" alt="">
           <div id="home-slide-title">
-            <span>MR.
+            <span>CẨM
             </span>
           </div>
         </div>
@@ -108,12 +108,12 @@
         <div id="home-image">
           <div id="home-title">
             <h1>
-              <span class="mobile-title">MR.
+              <span class="mobile-title">CẨM
               </span>
-              <span>PHUONG
+              <span>DAI ICHI
               </span>
             </h1>
-            <p>Web Designer &amp; Developer
+            <p>Gắn bó dài lâu
             </p>
           </div>
           <!-- SOCIAL ICONS -->
@@ -153,12 +153,15 @@
         </div>
         <!-- PAGE CONTENT -->
         <div class="cv-page-content">
-          <h2 class="border">VỀ TÔI
+          <h2 class="border">GIỚI THIỆU
           </h2>
-          <p><span style="font-weight:bold;color:red;">Chuyên:</span> Thiết kế &amp; phát triển WebBlog trên nền
-Blogger / Blogspot, theo chuẩn SEO.
-          </p>
-            <p><span style="font-weight:bold;color:red;">Nhận:</span> tùy chỉnh tất cả giao diện Blogger / Blogspot, Edit website về Blogspot</p>
+          <p>Tôi đại diện cho CTY BHNT DAI ICHI LIFE NHẬT BẢN mang đến cho bạn giải pháp vừa bảo vệ gia đình, tài chính và sức khỏe.
+<P/>
+BHNT không phải có tiền là mua được, bạn phải có sức khỏe và nằm trong độ tuổi quy định
+<P/>
+Hãy gọi cho tôi theo số 052 898 8879 để được tư vấn BẢO VỆ sức khỏe và tài chính của gia đình bạn từ hôm nay.
+<P/>
+Với hơn 100 năm hoạt động, Dai-ichi Life luôn song hành trên con tàu cuộc sống của mỗi người để cùng nhau vượt qua những khó khăn và đem lại hạnh phúc cho khách hàng, đó cũng chính là niềm hạnh phúc của chính bản thân Công ty. Và Dai-ichi Life vẫn luôn tìm kiếm những ứng viên tài năng, để cùng đồng hành trên những con tàu ấy, để luôn cam kết "Gắn bó dài lâu" với khách hàng Việt Nam.</p>
           <!-- TABLE -->
           <ul class="cv-table">
             <li>
@@ -166,7 +169,7 @@ Blogger / Blogspot, theo chuẩn SEO.
                 <i class="cv-icon fa fa-user">
                 </i>Date of birth
               </div>
-              <div class="cv-table-right">November 08th 1976
+              <div class="cv-table-right">June 07th 1980
               </div>
             </li>
             <li>
@@ -174,7 +177,7 @@ Blogger / Blogspot, theo chuẩn SEO.
                 <i class="cv-icon fa fa-language">
                 </i>Languages
               </div>
-              <div class="cv-table-right">Viet Nam.
+              <div class="cv-table-right">Viet Nam. English
               </div>
             </li>
             <li>
@@ -182,7 +185,7 @@ Blogger / Blogspot, theo chuẩn SEO.
                 <i class="cv-icon fa fa-futbol-o">
                 </i>Hobbies
               </div>
-              <div class="cv-table-right">Computer, Music, Coffee
+              <div class="cv-table-right">Du lịch, Học hỏi
               </div>
             </li>
             <li>
@@ -191,15 +194,12 @@ Blogger / Blogspot, theo chuẩn SEO.
                 </i>Website
               </div>
               <div class="cv-table-right">
-                <a title="Mr.Phương Home Page" href="/home/index.html">mrphuong.github.io/home
+                <a title="Mr.Phương Home Page" href="/home/index.html">htcdaiichilife.github.io/home
                 </a>
               </div>
             </li>
           </ul>
-          <p>Bạn cần một WebBlog chất lượng, chuyên nghiệp thể hiện đẳng cấp doanh nghiệp?. 
-          </p>
-            <p>Bạn đang mong muốn một Website chuyên nghiệp &amp; hoàn hảo cho công việc kinh doanh?</p>
-            <p>Hãy để tôi giúp bạn, tôi có thể tư vấn giúp bạn một WebBlog hợp thời đại, chuẩn quốc tế, tối ưu tính năng seo, thân thiện với google &amp; các bộ máy tìm kiếm khác và điều đặc biệt là "hoàn toàn miễn phí hosting". Chuyên nghiệp, đồng bộ hoá thương hiệu online, dễ dàng quản trị, khai thác tối đa hiệu quả &amp; tính năng. Đó là Blogger (Tôi gọi là WebBlog ).</p>Hãy liên hệ ngay với tôi ở BUTTON bên dưới hoặc XEM MẪU demo ở nút kế bên.....!<br />
+          <br />
           <a href="#contact" class="cv-button primary go-to-floor" data-id="5" data-slug="contact">Liên hệ
           </a>
           <a href="#" class="cv-button">Xem mẫu
@@ -572,7 +572,7 @@ Blogger / Blogspot, theo chuẩn SEO.
                 <i class="cv-icon fa fa-phone-square">
                 </i>Phone
               </div>
-              <div class="cv-table-right">+84 92 126 65 67.
+              <div class="cv-table-right">+84 52 898 8879.
               </div>
             </li>
             <li>
@@ -581,7 +581,7 @@ Blogger / Blogspot, theo chuẩn SEO.
                 </i>E-mail
               </div>
               <div class="cv-table-right">
-                <a href="mailto:mrphuongorg@gmail.com">mrphuongorg@gmail.com
+                <a href="mailto:mrphuongorg@gmail.com">htc.daiichilife@gmail.com
                 </a>
               </div>
             </li>
@@ -633,7 +633,7 @@ Blogger / Blogspot, theo chuẩn SEO.
       <footer id="footer">
         <div class="cv-credits">
           Copyright 
-          <a href="#">Egemenerd
+          <a title="Ms.Cẩm Dai Ichi Life" href="#">Ms.Cẩm Dai Ichi
           </a> - All rights reserved
         </div>
         <!-- BACK TO TOP BUTTON -->
